Add: import socket io CDN in Client's index.html

--- a/Client/index.html
+++ b/Client/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <link rel="icon" href="/favicon.ico">
+    <script src="https://cdn.socket.io/4.5.3/socket.io.min.js"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Vite App</title>
   </head>
